pl 17.mb1
        - bf: No unnecessary warnings about time signatures
        - Added optional second argument of \key. Set to \major or \minor 
	  to get a major or minor key. Default: major.
        - Parser support for cautionary accidentals, i.e. accidentals 
          within parantheses. Syntax: cis? The main part of the 
          implementation is still missing.

pl 17
	- fixed RPM building.

pl 16.hwn1
 	- ridiculous slur dims fixed.
 	- ly2dvi32.py -> ly2dvi.py, ly2dvi.sh -> ly2dvi-old
 	- use re iso. regex for python stuff.
 	- bf: mudela-book.py
 	- updated install directions.  Made lilypond-login for csh
 	- bf: installdirs of MF stuff
 	- Dictionary implementation using hash tables (LilyPond is 3% faster)
 	- Cache [non]group_l_arr () calls in translator-group.cc (LilyPond is 4% faster)

pl 16.uu1
	- debian URLs, make/stepmake.make  patch
	- further debian fixes.
	
pl 14.tca1
	- partitas
	- prall{mordent,prall} patch.

******
pl 16
	- read property ydirection and tieYDirection for tie direction.
	- bf: slur over rest.
	- bf: include path
	- part of jcn2
	- configure --enable-guile

pl 15.jcn1
 	- autoconf on mf,mfont mp,mpost
 
pl 15.am
	- Lots of patches from *Adrian* *Mariano*!

**********

pl 15
pl 14.hwn1
	- \lyrics iso \lyric (mudela 1.0.7)
	- cleaned up real_expression syntax.
	- removed optional_semicolon nonterminal after toplevel assignment
	- MInterval Music::time_int () -> Moment Music::duration ()
	- junked Music_iterator::daddy_iter_l_
	- junked Sequential_music::offset_mom_
	- tempo compression:
		* syntax: \times 2/3 Music
		* Compressed_music, Compressed_music_iterator
	- flower: init rational to 0
	- flower: removed P?Cursor<>::P?Cursor (), using pointer iso ref now.
	- don't install into TeX, but into ${datadir}/{mf,tex,ly} (todo: ps)


*********
pl 14

pl 13.uu1
	- syntax for \translator: (\name  "Name")
	- bfs for footer
	- bf: init/{book,center}-fragment.ly, YODL nofooter stuff. 
	- bf: redeclaration
	- bf: doc fixes